# nl80211-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  abbreviations.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: nl80211.rs
netlink/: Cargo.toml  build.rs
netlink-buildtools/src/: lib.rs
netlink/buildtools/: Cargo.toml
netlink/examples/: example.rs  uevent_example.rs
netlink/src/: errors.rs  generic.rs  lib.rs  route.rs
netlink/src/core/: hardware_address.rs  helpers.rs  mod.rs  system.rs  variant.rs
netlink/src/kernel/: mod.rs
nl80211-buildtools/: Cargo.toml  LICENSE  README.md
nl80211-buildtools/examples/: specgen.rs
nl80211-buildtools/src/: lib.rs
specifications/: information_element_id.json  nl80211_attributes.json  nl80211_commands.json  update.py
src/: .gitignore  attributes.rs  commands.rs  frame.rs  information_element.rs  information_element_ids.rs  lib.rs  regulatory.rs  unpack.rs  wireless_interface.rs  wireless_phy.rs
