[package]
name = "nl80211"
version = "0.1.0"
authors = ["Erik Svensson <erik.public@gmail.com>"]
build = "build.rs"
description="Experiments with netlink and nl80211 in Rust"
license="MIT"
repository="https://github.com/blueluna/nl80211-rs"
keywords = ["netlink", "nl80211", "80211"]

[build-dependencies]
nl80211-buildtools = { git = "https://github.com/blueluna/nl80211-buildtools", branch = "master" }

[dependencies]
libc = "0.2"
bitflags =  "1.0"
netlink-rust = { git = "https://github.com/blueluna/netlink-rs", branch = "master" }

[dev-dependencies]
mio = "0.6"
encoding = "0.2"
clap = "2"

[badges]
travis-ci = { repository = "blueluna/nl80211-rs", branch = "master" }
