[package]
name = "nl80211-rs"
version = "0.1.1"
authors = ["Erik Svensson <erik.public@gmail.com>"]
build = "build.rs"
description="nl80211 library in Rust"
readme = "README.md"
license="MIT"
repository="https://github.com/blueluna/nl80211-rs"
keywords = ["netlink", "nl80211", "80211"]

[workspace]
members = [ "nl80211-buildtools" ]

[build-dependencies]
nl80211-buildtools = { path = "nl80211-buildtools", version = "0.1" }

[dependencies]
bitflags =  "1.0"
byteorder = "1.2"
encoding = "0.2"
netlink-rust = { git = "https://github.com/blueluna/netlink-rs", branch = "master" }

[dev-dependencies]
mio = "0.6"
clap = "2"
libc = "0.2"

[badges]
travis-ci = { repository = "blueluna/nl80211-rs", branch = "master" }
