[package]
name = "nl80211-buildtools"
version = "0.1.1"
authors = ["Erik Bånvik <erik.public@gmail.com>"]
description="Tools for building datastructures and constants for nl80211"
license="MIT"
repository="https://github.com/blueluna/nl80211-rs"
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
clap = "4.5"
regex = "1.6"
